--- a/styles.css
+++ b/styles.css
@@ -50,17 +50,18 @@ body {
 .welcome {
   display: inline-block;
   position: relative;
-  top: 300px;
-  left: 1100px;
-  width: 100%;
+  left: 50%;
+  width: 40%;
   height: 500px;
   background-color: red;
+
+
 }
 
 #welcomeText {
   font-family: 'DM Serif Display', sans-serif;
   color: #F6BD89;
-  font-size: 40pt;
+  font-size: 6vw;
   letter-spacing: 2px;
   opacity: 0;
   animation: fadeIn 8s;
@@ -90,7 +91,7 @@ body {
   }
   to {
     opacity: 1;
-    width: 28%;
+    width: 100%;
   }
 }
 
