--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,9 @@ body {
 .welcome {
   display: inline-block;
   position: relative;
-  left: 50%;
+  left: 70%;
   width: 40%;
-  height: 500px;
+  height: 70%;
   background-color: red;
 }
 
